# Smart-esprit

./: saifchobba_main.c
Admin/: Makefile  config.status  project2.glade.bak
Admin/autom4te.cache/: requests
Admin/src/: Makefile  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h.bak  main.c  project2  user.txt
foyer_agent/: Makefile  Makefile.in  config.h  config.status  configure  configure.in  project1.glade  project1.gladep.bak
foyer_agent/autom4te.cache/: output.0  requests  traces.0  traces.1
foyer_agent/po/: Makefile  Makefile.in
foyer_agent/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  fonction_foyer_agent.c  fonction_foyer_agent.h  foyer_agent  interface.c  interface.c.bak  interface.h  main.c  project1  student.txt
foyer_agent/src/.deps/: callbacks.Po  fonction_foyer_agent.Po
nutrionist/: Makefile  config.status  project2.glade.bak
nutrionist/autom4te.cache/: requests
nutrionist/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  plats.c  plats.h  project2
reclamation/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  reclamation.glade.bak  reclamation.gladep.bak
reclamation/autom4te.cache/: output.0  requests  traces.0  traces.1
reclamation/po/: Makefile  Makefile.in
reclamation/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  reclamation  reclamation.c  reclamation.h  (+1 more)
(+4 files in other folders)
